Modify Maven
Updated MAVEN_OPTS for Java 17 compatibility.